k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: arrienta-frontend-service
spec:
  selector:
    app: arrienta-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
