k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arrienda-tu-finca-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: arriendatufinca.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: arrienta-frontend-service
            port:
              number: 80
